# wikimedia-cli

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml  script.py  tox.ini
.github/workflows/: publish.yml  test.yml
commands/: article.py  revision.py  search.py  util.py
commands/wikipedia/: article.py  http.py  revision.py  search.py
commands/wiktionary/: http.py  phrase.py  revision.py  search.py
docs/: conf.py  index.rst  installation.md  intro.rst
docs/commands/wikipedia/: article.md  common.md  http.md  revision.md  search.md  wikipedia.rst
docs/commands/wiktionary/: common.md  http.md  phrase.md  revision.md  search.md  wiktionary.rst
wikimedia-cli/: __main__.py
wikimedia-cli/commands/wikipedia/: http.py
wikimedia-cli/commands/wiktionary/: phrase.py
wikimedia_cli/: __init__.py  cli.py
wikimedia_cli/commands/: util.py
wikimedia_cli/commands/wikipedia/: article.py  http.py  revision.py  search.py
wikimedia_cli/commands/wiktionary/: http.py  phrase.py  revision.py  search.py
